$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-18 (opened April 21, 2009)

	* twostagechao: function that calculates multiple-community
	similarity based on Chao et al. 2008 (Biometrics 64, 1178-86).
	Some debugging is needed since it cannot reproduce the numbers
	in Table 3 exactly (lower estimates and SEs). The Rd file
	also needs more details.

	* anova.cca: there was a name clash and failure in
	anova.ccabymargin, anova.ccabyaxis and anova.ccabyterm if data
	were indexed with 'i' in the fitted model. Now the internal
	indexing uses less likely name (.ITRM) to avoid name clashes.

	* orditkplot: copes with missing or NaN scores (omits them).

	* ordixyplot: failed in constrained ordination (cca, rda,
	capscale). Was broken in rev108 on Nov 7, 2007(!). The biplot was
	rotated 90 degrees: it seems that lattice calls x y and y x. 

	* ordixyplot & ordisplom: Gained a new type = "arrows" that is a
	Lattice version of ordiarrows.

	* RsquareAdj: defined as generic function. The old RsquareAdj is
	now the "default" method, and there are specific methods for
	"rda", "cca" (= NA), "lm" and "glm" objects. Not yet documented,
	but functions are listed as aliases in varpart.Rd. On Pierre
	Legendre's request.
	
Version 1.16-17 (closed April 15, 2009)

	* closed concurrently with the release of vegan 1.15-2.

	* spantree.Rd: example plots use type = "t" to demonstrate the use
	of ordilabel(). 

	* nestedtemp: docs tell that Carsten Dormann's bipartite package
	has a direct port of BINMATNEST programme of Rodriquez-Girones &
	Santamaria. 

	* anosim: uses much less memory allowing analysis of larger
	problems (number of rows, number of iterations). The change
	concerns only internal data structures, and the permutation
	results should be identical with old and new code when the same
	random number seed is used. The Rd file got an example of using
	'strata' in permutations.

	* meandist: a new sister function for mrpp. Function meandist